# hello-c

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  main.c  mise.toml
